<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Activity string -->
    <string name="app_name">可控Ctrl</string>
    <string name="bt_not_enabled_leaving">蓝牙未开启，将退出</string>
    <string name="connecting">正在连接&#8230;</string>
    <string name="connected_to">已连接:</string>
    <string name="button">按住开始遥控</string>

    <!-- IMU Fragment -->
    <string name="pitch">Pitch(绕X轴): </string>
    <string name="roll">Roll(绕Y轴): </string>
    <string name="coefficient">LPF系数: </string>
    <string name="sendingData">数据发送中</string>
    <string name="notSendingData">按住使用重力感应</string>

    <!-- Joystick Fragment -->
    <string name="defaultJoystickValue">x: 0 y: 0</string>

    <!-- Graph Fragment -->
    <string name="ch1">通道1 [红]</string>
    <string name="ch2">通道2 [绿]</string>
    <string name="ch3">通道3 [黄]</string>
    <string name="ch_limit">范围±</string>
    <string name="Qbias">Q<small><small>bias</small></small></string>
    <string name="Rmeasure">R<small><small>measure</small></small></string>
    <string name="update">更新参数</string>

    <!-- PID Fragment -->
    <string name="Kp">P:</string>
    <string name="Ki">I:</string>
    <string name="Kd">D:</string>
    <string name="targetAngle">目标值:</string>
    <string name="currentValues">当前值:</string>
    <string name="adjustValues">调整参数:</string>
    <string name="updateValues">更新参数到设备</string>

    <!-- Info Fragment -->
    <string name="name">蓝牙遥控</string>
    <string name="manufacturer">by 彭稚晖@UESTC</string>
    <string name="appVersion">App版本:</string>
    <string name="firmwareVersion">Firmware 版本:</string>
    <string name="eepromVersion">EEPROM 版本:</string>
    <string name="mcu">MCU:</string>
    <string name="batterylevel">电量:</string>
    <string name="runtime">运行时间:</string>
    <string name="more1">配套Arduino库地址：</string>
    <string name="more2"><a href='http://www.baidu.com'>点击跳转 Arduino中文社区</a></string>
    <string name="more3"><a href='http://www.pengzhihui.com'>www.pengzhihui.com</a></string>


    <!-- Settings Dialog Fragment -->
    <string name="dialog_title">设置</string>
    <string name="coefficientText">调整手机重力感应效果的参数（用于融合手机加速度计和陀螺仪，效果不佳时调整）</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="angleText">调整自动停机的角度</string>
    <string name="angle">最大倾斜角度:</string>
    <string name="turningText">调整最大转向输出</string>
    <string name="turning">最大转向值:</string>
    <string name="backToSpotText">是否开启速度环</string>
    <string name="backToSpot">速度环</string>
    <string name="uploadText">更新固件（USB-host接口）</string>
    <string name="uploadButtonText">上传固件</string>
    <string name="wiiText">连接Wiimote或者Wii U控制器</string>
    <string name="wiiButtonText">配对Wiimote</string>
    <string name="ps4Text">连接PS4手柄</string>
    <string name="ps4ButtonText">配对PS4手柄</string>
    <string name="restoreText">走两步</string>
    <string name="restoreButtonText">走起</string>

    <!-- Upload dialog -->
    <string name="uploadFirmware"> </string>
    <string name="rev12">Revision 1.2</string>
    <string name="rev13">Revision 1.3</string>

    <!--  DeviceListActivity -->
    <string name="scanning">搜索中&#8230;</string>
    <string name="select_device">请选择一个设备连接</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">未发现设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">可用设备</string>
    <string name="button_scan">搜索设备</string>

    <!-- Options Menu -->
    <string name="connect">连接</string>
    <string name="settings">设置</string>

    <string name="tag_IMU">重力感应</string>
    <string name="tag_joystick">摇杆</string>
    <string name="tag_graph">曲线</string>
    <string name="tag_pid">终端</string>
    <string name="tag_info">信息</string>
    <string name="stop">运行中...</string>
    <string name="start">已停止</string>
    <string name="button_beta">试验功能,待开放...</string>
</resources>