<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="xyz.pengzhihui.BTremote.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff33b5e5"/>

        <TextView
            android:id="@+id/manufacturerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/manufacturer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/appVersionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appVersion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/manufacturerText"
            android:layout_alignLeft="@+id/manufacturerText"
            android:layout_alignStart="@+id/manufacturerText"/>

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/appVersionText"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toRightOf="@id/appVersionText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/more_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/appVersionText"
            android:layout_alignStart="@+id/appVersionText"
            android:layout_below="@+id/appVersionText"
            android:layout_marginTop="5dp"
            android:text="@string/more1"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/button_beta"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:text="@string/button_beta"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/more_tv"
            android:layout_below="@+id/appVersion"
            android:layout_toEndOf="@+id/more_tv"
            android:layout_toRightOf="@+id/more_tv"
            android:gravity="start"
            android:text="@string/more2"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/more_tv"
            android:layout_alignStart="@+id/more_tv"
            android:layout_below="@+id/more_tv"
            android:layout_marginTop="5dp"
            android:text="个人主页："
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="start"
            android:text="@string/more3"
            android:textAlignment="center"
            android:textSize="17sp"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#兼容性问题和功能建议请到主页下留言反馈哟~"
            android:layout_above="@+id/button_beta"
            android:layout_alignLeft="@+id/button_beta"
            android:layout_alignStart="@+id/button_beta"/>

    </RelativeLayout>

</ScrollView>